src/components/AnimeCard/AnimeCard.css
.anime-wrapper {
    width: 100%;
    min-height: 300px;
    position: relative;
    /* overflow: hidden; */
    margin-bottom: 36px;
}

.anime-wrapper:hover .anime-play-button {
    transform: scale(1, 1);
    opacity: 1;
}

.anime-wrapper:hover .anime-img {
    opacity: 0.4;
}

.anime-wrapper:hover .anime-extra-detail {
    opacity: 1;
}

.anime-link {
    display: inline-block;
    width: 100%;
    height: 100%;
}

.anime-img {
    width: 100%;
    height: 240px;
    border-radius: 4px;
    object-fit: cover;
    margin-bottom: 20px;
}

.anime-eposide {
    position: absolute;
    background-color: rgba(183,28,28,.9);
    width: 48px;
    border-radius: 50%;
    height: 48px;
    text-align: center;
    color: #fff;
    right: 12px;
    top: 12px;
    text-transform: uppercase;
    text-shadow: 0 0 2px rgb(0 0 0 / 30%);
    font-size: 1rem;
    font-weight: bold;
    display: flex;
    align-items: center;
    justify-content: center;
}

.anime-rating {
    position: absolute;
    top: 14px;
    left: 12px;
    color: #f5ec42;
    background-color: rgba(0,0,0,.65);
    width: 60px;
    height: 34px;
    border-radius: 16px;
    text-align: center;
    line-height: 32px;
}

.anime-rating i {
    margin-right: 2px;
}

.anime-title {
    text-align: center;
    color: #fff;
    font-size: 1.6rem;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.anime-view {
    text-align: center;
    color: #7d7d7d;
    font-size: 1.2rem;
    width: 100%;
    display: inline-block;
}

.anime-play-button {
    position: absolute;
    left: 36%;
    top: 26%;
    font-size: 6rem;
    color: #fff;
    cursor: pointer;
    transform-origin: center;       
    transform: scale(0, 0);
    opacity: 0;
    transition: transform ease 0.4s, opacity ease 0.4s;
}

.anime-extra-detail {
    width: 240px; 
    background-color: #fff;
    color: #78909c;
    position: absolute;
    top: -16px;
    left: 80%;
    z-index: 2;
    padding: 24px 20px;
    border-radius: 4px;
    opacity: 0;
    transition: opacity 0.3s linear;
    pointer-events: none;
}

.anime-extra-detail::before {
    content: '';
    position: absolute;
    left: -20px;
    transform: translateY(-50%);
    top: 50%;
    border: 10px solid transparent;
    border-right: 10px solid #fff;
}

.anime-recommand-container .container .row .col-4:last-child .anime-extra-detail {
    left: -110%;
}

.anime-recommand-container .container .row .col-4:last-child .anime-extra-detail::before {
    left: 100%;
    border-right: 10px solid transparent;
    border-left: 10px solid #fff;
}

.anime-extra-detail-title {
    color: #000;
    font-size: 1.8rem;
    margin-bottom: 12px;
}

.anime-extra-detail-summary {
    line-height: 20px;
    display: -webkit-box;
    -webkit-line-clamp: 9;
    -webkit-box-orient: vertical;  
    overflow: hidden;
    font-size: 1.2rem;
}

/* Reponsive */

@media (max-width: 1199px) {
    .anime-extra-detail {
        width: 200px;
        left: 85%;
    }

    .anime-extra-detail-summary {
        line-height: 20px;
        -webkit-line-clamp: 6;
    }
}

@media (max-width: 991px) {
    .anime-extra-detail {
        display: none;
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .anime-recommand-container .anime-img {
        height: 360px;
    }
}

